log/build_2023-05-15_11-11-40/teleopbot/stderr.log
  File "/home/nippun/ros2_course_test/install/teleopbot/lib/python3.10/site-packages/teleopbot/Key_detect.py", line 15
    	print(String(type(x))
    	     ^
SyntaxError: '(' was never closed

